--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "romanizer",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Some Roman to Arabic converter",
   "main": "romanizer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
   },
   "author": "Denisiums",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "23.4.2"
+  }
 }
